--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/x-license-pro": "^6.10.2",
     "axios": "^1.11.0",
     "dayjs": "^1.11.18",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
