--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "sass": "^1.92.1"
   }
 }
